--- a/site/index.html
+++ b/site/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>You are a bell end</title>
+    <title>Hey You</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>(shaun)</h1>
+    <h1>You are a bell end(shaun)</h1>
 </body>
 </html>
